--- a/UI/index.html
+++ b/UI/index.html
@@ -11,12 +11,12 @@
     <header>
         <div class="container">
             <div id="logo">
-                <h1>Banka</h1>
+                <a href="index.html"><h1>Banka</h1></a>
             </div>
 
             <nav>
                 <ul>
-                    <li><a href="signup.html">Signup</a></li>
+                    <li><a href="./html/signup.html">Signup</a></li>
                     <li><a href="signup.html">Signin</a></li>
                 </ul>
             </nav>
@@ -62,7 +62,7 @@
                     <h1>Welcome to Banka</h1>
                     <p>Banka is a light-weight core banking application that powers banking operations like account
                     creation, customer deposit and withdrawals.</p>
-                    <button>Get started</button>
+                    <a href="./html/signup.html"><button>Get started</button></a>
                 </div>
         </div> 
        
