--- a/UI/index.html
+++ b/UI/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="./html/signup.html">Signup</a></li>
-                    <li><a href="signup.html">Signin</a></li>
+                    <li><a href="./html/signin.html">Signin</a></li>
                 </ul>
             </nav>
 
