[Feature #164954608]Allow a logged in user to create account

--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css">
 </head>
 <body>
+    <!--Navbar-->
     <header>
         <div class="container">
             <div id="logo">
@@ -27,6 +28,7 @@
         </div>
     </header>
 
+    <!--Side nav for the small screen-->
     <section class="signup">
         <div class="navbar">
             <ul> 
@@ -55,9 +57,10 @@
                     
             </ul>
         </div>
-        <div id="signUpForm">
+        <!--Registration form-->
+        <div id="allForm">
             <h2>Sign up</h2>
-            <form action="inbox.html">
+            <form action=".html">
                 <div class="inputBox">            
                     <input autocomplete="off" type="text" name="firstName" required>
                     <label for="firstName">First Name</label>
