--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css">
 </head>
 <body>
+    <!--Navbar-->
     <header>
         <div class="container">
             <div id="logo">
@@ -28,7 +29,7 @@
     </header>
 
     <section>
-
+        <!--Side nav for the small screen-->
         <div class="navbar">
             <ul> 
                 <div class="close">X</div>
@@ -56,6 +57,7 @@
                     
             </ul>
         </div>
+        <!--Welcome and into to banka-->
         <div class="intro">
            
                 <div id="welcome">
