[Feature #164954767]View transactions history

--- a/UI/html/create-account.html
+++ b/UI/html/create-account.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="../html/signup.html">Profile</a></li>
-                    <li><a href="../html/signin.html">History</a></li>
+                    <li><a href="../html/history.html">History</a></li>
                     <li><a href="../html/create-account.html">Create account</a></li>
                 </ul>
             </nav>
@@ -35,14 +35,14 @@
             <ul> 
                 <div class="close">X</div>
 
-                    <a href="admin.html">
+                    <a href="../html/profile.html">
                         <div class="admin-nav-side">
                             Profile 
                         </div>
                     </a>
 
                 
-                    <a href="signIn.html">
+                    <a href="../html/history.html">
                         <div class="admin-nav-side">
                             History
                         </div>
@@ -59,7 +59,7 @@
             </ul>
         </div>
         <!--Registration form-->
-        <div id="allForm">
+        <div class="allForm">
             <h2>Create account</h2>
             <form action=".html">
                 <div class="inputBox">            
