--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -58,7 +58,7 @@
             </ul>
         </div>
         <!--Registration form-->
-        <div id="allForm">
+        <div class="allForm">
             <h2>Sign up</h2>
             <form action=".html">
                 <div class="inputBox">            
