[Feature #164957206]Allow user to see his profile

--- a/UI/html/history.html
+++ b/UI/html/history.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="../html/signup.html">Profile</a></li>
                     <li><a href="../html/history.html">History</a></li>
-                    <li><a href="../html/create-account.html">Create account</a></li>
+                    <li><a href="../html/create-account.html">Create-account</a></li>
                 </ul>
             </nav>
 
@@ -51,7 +51,7 @@
                 
                     <a href="../html/create-account.html">
                         <div class="admin-nav-side">
-                            Create account
+                            Create-account
                         </div>
                     </a>      
             </ul>
