[Feature #164967741] Allow Admin to view all users accounts

--- a/UI/html/signin.html
+++ b/UI/html/signin.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="../html/signup.html">Signup</a></li>
-                    <li><a href="../html/signin.html">Signin</a></li>
+                    <li><a class="active" href="../html/signin.html">Signin</a></li>
                 </ul>
             </nav>
 
@@ -59,7 +59,7 @@
         <!--Login form-->
         <div class="allForm" id="signin">
             <h2>Sign in</h2>
-            <form action="inbox.html" method="POST">
+            <form action="profile.html" method="POST">
                 
                 <div class="inputBox">
                     <input autocomplete="off" type="email" name="email"  required>
