--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -17,7 +17,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="../html/signup.html">Signup</a></li>
+                    <li><a class="active" href="../html/signup.html">Signup</a></li>
                     <li><a href="../html/signin.html">Signin</a></li>
                 </ul>
             </nav>
@@ -60,7 +60,7 @@
         <!--Registration form-->
         <div class="allForm">
             <h2>Sign up</h2>
-            <form action=".html">
+            <form action="profile.html">
                 <div class="inputBox">            
                     <input autocomplete="off" type="text" name="firstName" required>
                     <label for="firstName">First Name</label>
