--- a/UI/html/history.html
+++ b/UI/html/history.html
@@ -15,13 +15,18 @@
                 <a href="../index.html"><h1>Banka</h1></a>
             </div>
 
-            <nav>
+            <nav id="pro">
                 <ul>
-                    <li><a href="../html/signup.html">Profile</a></li>
-                    <li><a href="../html/history.html">History</a></li>
                     <li><a href="../html/create-account.html">Create-account</a></li>
+                    <li><a class="active" href="../html/history.html">History</a></li>
+                    <li><a href="../index.html">Logout</a></li>    
                 </ul>
             </nav>
+            <div class="avatar">
+                <a href="../html/profile.html">
+                    <img src="../assets/icons/man.svg" alt="Profile">
+                </a> 
+            </div>
 
             <div class="menu">
                 <img src="../assets/icons/menu.svg" alt="Menu">
@@ -53,7 +58,13 @@
                         <div class="admin-nav-side">
                             Create-account
                         </div>
-                    </a>      
+                    </a> 
+                    
+                    <a href="../index.html">
+                        <div class="admin-nav-side">
+                            Logout
+                        </div>
+                    </a>
             </ul>
         </div>
 
