[Feature #164972102]Allow staff to credit or debit

--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -40,13 +40,13 @@
             <ul> 
                 <div class="close">X</div>
 
-                    <a href="../html/profile.html">
+                    <a href="../html/admin.html">
                         <div class="admin-nav-side">
-                            Profile 
+                            Users 
                         </div>
                     </a>
                 
-                    <a href="../html/create-account.html">
+                    <a href="../html/admin-crt-acc.html">
                         <div class="admin-nav-side">
                             Create-account
                         </div>
