--- a/UI/html/staff.html
+++ b/UI/html/staff.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a href="#">Transaction</a></li>
+                    <li><a href="./transaction.html">Transaction</a></li>
                     <li><a class="active" href="../html/staff.html">users</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
@@ -46,7 +46,7 @@
                         </div>
                     </a>
                 
-                    <a href="#">
+                    <a href="./transaction.html">
                         <div class="admin-nav-side">
                             Transaction
                         </div>
