--- a/UI/index.html
+++ b/UI/index.html
@@ -19,6 +19,8 @@
                 <ul>
                     <li><a href="./html/signup.html">Signup</a></li>
                     <li><a href="./html/signin.html">Signin</a></li>
+                    <li><a href="./html/admin-signin.html">Admin</a></li>
+                    <li><a href="./html/staff-signin.html">Staff</a></li>
                 </ul>
             </nav>
 
@@ -34,9 +36,15 @@
             <ul> 
                 <div class="close">X</div>
 
-                    <a href="#">
+                    <a href="./html/admin-signin.html">
                         <div class="admin-nav-side">
                             Admin 
+                        </div>
+                    </a>
+
+                    <a href="./html/staff-signin.html">
+                        <div class="admin-nav-side">
+                            Staff 
                         </div>
                     </a>
 
@@ -52,9 +60,7 @@
                         <div class="admin-nav-side">
                             Sign up
                         </div>
-                    </a>
-                
-                    
+                    </a> 
             </ul>
         </div>
         <!--Welcome and into to banka-->
