[Bug #164982011]Remove admin and staff link from landing page

--- a/UI/html/signin.html
+++ b/UI/html/signin.html
@@ -49,7 +49,7 @@
         </div>
         <!--Login form-->
         <div class="allForm" id="signin">
-            <h2>Sign in</h2>
+            <h2>Signin to Banka</h2>
             <form action="profile.html" method="POST">
                 
                 <div class="inputBox">
@@ -61,7 +61,7 @@
                     <input type="password" name="password" required>
                     <label for="password">Password</label>
                 </div>
-                <input type="submit" name="submit" id="submitSingIn" value="Sign in to Banka">
+                <input type="submit" name="submit" id="submitSingIn" value="Signin">
                 
             </form>
         </div>
