--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -59,7 +59,7 @@
         </div>
         <!--Registration form-->
         <div class="allForm">
-            <h2>Sign up</h2>
+            <h2>Signup to Banka</h2>
             <form action="profile.html">
                 <div class="inputBox">            
                     <input autocomplete="off" type="text" name="firstName" required>
@@ -87,7 +87,7 @@
                 </div>
                 
                 
-                <input type="submit" name="submit" id="submitButton" value="Sign up to Banka"></a>
+                <input type="submit" name="submit" id="submitButton" value="Signup"></a>
             </form>
         </div>
     </section>
