--- a/UI/html/admin-crt-acc.html
+++ b/UI/html/admin-crt-acc.html
@@ -22,11 +22,6 @@
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
             </nav>
-            <div class="avatar">
-                <a href="../html/profile.html">
-                    <img src="../assets/icons/man.svg" alt="Profile">
-                </a> 
-            </div>
 
             <div class="menu">
                 <img src="../assets/icons/menu.svg" alt="Menu">
@@ -39,8 +34,14 @@
         <div class="navbar">
             <ul> 
                 <div class="close">X</div>
-                
-                    <a href="../html/create-account.html">
+
+                    <a href="../html/admin.html">
+                        <div class="admin-nav-side">
+                            Users
+                        </div>
+                    </a>
+
+                    <a href="../html/admin-crt-acc.html">
                         <div class="admin-nav-side">
                             Create-account
                         </div>
