--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -22,11 +22,6 @@
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
             </nav>
-            <div class="avatar">
-                <a href="../html/profile.html">
-                    <img src="../assets/icons/man.svg" alt="Profile">
-                </a> 
-            </div>
 
             <div class="menu">
                 <img src="../assets/icons/menu.svg" alt="Menu">
@@ -91,7 +86,7 @@
                         </td>
                         <td>
                             <button id="operation">Activate</button>
-                            <button id="operationd">Deactivate</button>
+                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -115,7 +110,7 @@
 
                         <td>
                             <button id="operation">Activate</button>
-                            <button id="operationd">Deactivate</button>
+                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -139,7 +134,7 @@
 
                         <td>
                             <button id="operation">Activate</button>
-                            <button id="operationd">Deactivate</button>
+                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -162,31 +157,7 @@
                         </td>
                         <td>
                             <button id="operation">Activate</button>
-                            <button id="operationd">Deactivate</button>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
-                        </td>
-                    </tr>
-
-                    <tr class="view">
-                        <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
-                        </td>
-                        <td> 
-                            <a href="admin-one-user.html">0056-456789-6543</a> 
-                        </td>
-                        <td> 
-                            <a href="admin-one-user.html">15th march 2019</a> 
-                        </td>
-                        <td>
-                            <a href="admin-one-user.html">Kigali</a>
-                        </td>
-                        <td>
-                            <a href="admin-one-user.html">500000frw</a>
-                        </td>
-
-                        <td>
-                            <button id="operation">Activate</button>
-                            <button id="operationd">Deactivate</button>
+                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -210,7 +181,31 @@
 
                         <td>
                             <button id="operation">Activate</button>
-                            <button id="operationd">Deactivate</button>
+                            <button id="operation">Deactivate</button>
+                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                        </td>
+                    </tr>
+
+                    <tr class="view">
+                        <td>
+                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td> 
+                            <a href="admin-one-user.html">0056-456789-6543</a> 
+                        </td>
+                        <td> 
+                            <a href="admin-one-user.html">15th march 2019</a> 
+                        </td>
+                        <td>
+                            <a href="admin-one-user.html">Kigali</a>
+                        </td>
+                        <td>
+                            <a href="admin-one-user.html">500000frw</a>
+                        </td>
+
+                        <td>
+                            <button id="operation">Activate</button>
+                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
