--- a/UI/html/staff.html
+++ b/UI/html/staff.html
@@ -22,11 +22,6 @@
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
             </nav>
-            <div class="avatar">
-                <a href="../html/profile.html">
-                    <img src="../assets/icons/man.svg" alt="Profile">
-                </a> 
-            </div>
 
             <div class="menu">
                 <img src="../assets/icons/menu.svg" alt="Menu">
@@ -60,7 +55,7 @@
             </ul>
         </div>
 
-        <div class="table-users">
+        <div class="table-transactions">
             <table id="staff-users">
                 <thead>
                     <tr>
