[Bug #164982011]Make changes on links

--- a/UI/html/admin-one-user.html
+++ b/UI/html/admin-one-user.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <div class="avatar">
-                <a href="../html/profile.html">
+                <a href="../html/admin-one-user.html">
                     <img src="../assets/icons/man.svg" alt="Profile">
                 </a> 
             </div>
