correct links which redirects to wrong pages

--- a/UI/html/staff-one-user.html
+++ b/UI/html/staff-one-user.html
@@ -17,9 +17,9 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a href="../html/admin-crt-acc.html">Create-account</a></li>
-                    <li><a href="../html/admin.html">Users</a></li>
-                    <li><a href="../index.html">Logout</a></li>    
+                    <li><a href="./transaction.html">Transaction</a></li>
+                    <li><a class="active" href="../html/staff.html">users</a></li>
+                    <li><a href="../index.html">Logout</a></li>     
                 </ul>
             </nav>
 
