--- a/UI/html/admin-one-user.html
+++ b/UI/html/admin-one-user.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a class="active" href="../html/admin-crt-acc.html">Create-account</a></li>
+                    <li><a href="../html/admin-crt-acc.html">Create-account</a></li>
                     <li><a href="../html/staff.html">users</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
