[Bug #165144564] Change backgound color to white

--- a/UI/html/admin-crt-acc.html
+++ b/UI/html/admin-crt-acc.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a class="active" href="../html/create-account.html">Create-account</a></li>
+                    <li><a class="active" href="../html/create-account.html">Open-account</a></li>
                     <li><a href="../html/admin.html">Users</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
@@ -43,7 +43,7 @@
 
                     <a href="../html/admin-crt-acc.html">
                         <div class="admin-nav-side">
-                            Create-account
+                            Open-account
                         </div>
                     </a>
 
@@ -59,7 +59,7 @@
         <!--Registration form-->
         <div class="allForm">
             <h2>Create account</h2>
-            <form action=".html">
+            <form action="admin.html">
                 <div class="inputBox">            
                     <input autocomplete="off" type="text" name="firstName" required>
                     <label for="firstName">First Name</label>
