--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a href="../html/admin-crt-acc.html">Create-account</a></li>
+                    <li><a href="../html/admin-crt-acc.html">Open-account</a></li>
                     <li><a class="active" href="../html/admin.html">users</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
@@ -43,7 +43,7 @@
                 
                     <a href="../html/admin-crt-acc.html">
                         <div class="admin-nav-side">
-                            Create-account
+                            Open-account
                         </div>
                     </a> 
                     
@@ -64,7 +64,7 @@
                         <th>Created on</th>
                         <th>Branch</th>
                         <th>Balance</th>
-                        <th>Operations</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -85,8 +85,6 @@
                             <a href="admin-one-user.html">500000frw</a>
                         </td>
                         <td>
-                            <button id="operation">Activate</button>
-                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -109,8 +107,6 @@
                             </td>
 
                         <td>
-                            <button id="operation">Activate</button>
-                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -133,8 +129,6 @@
                         </td>
 
                         <td>
-                            <button id="operation">Activate</button>
-                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -156,32 +150,6 @@
                             <a href="admin-one-user.html">500000frw</a>
                         </td>
                         <td>
-                            <button id="operation">Activate</button>
-                            <button id="operation">Deactivate</button>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
-                        </td>
-                    </tr>
-
-                    <tr class="view">
-                        <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
-                        </td>
-                        <td> 
-                            <a href="admin-one-user.html">0056-456789-6543</a> 
-                        </td>
-                        <td> 
-                            <a href="admin-one-user.html">15th march 2019</a> 
-                        </td>
-                        <td>
-                            <a href="admin-one-user.html">Kigali</a>
-                        </td>
-                        <td>
-                            <a href="admin-one-user.html">500000frw</a>
-                        </td>
-
-                        <td>
-                            <button id="operation">Activate</button>
-                            <button id="operation">Deactivate</button>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
@@ -204,8 +172,28 @@
                         </td>
 
                         <td>
-                            <button id="operation">Activate</button>
-                            <button id="operation">Deactivate</button>
+                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                        </td>
+                    </tr>
+
+                    <tr class="view">
+                        <td>
+                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                        </td>
+                        <td> 
+                            <a href="admin-one-user.html">0056-456789-6543</a> 
+                        </td>
+                        <td> 
+                            <a href="admin-one-user.html">15th march 2019</a> 
+                        </td>
+                        <td>
+                            <a href="admin-one-user.html">Kigali</a>
+                        </td>
+                        <td>
+                            <a href="admin-one-user.html">500000frw</a>
+                        </td>
+
+                        <td>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
                         </td>
                     </tr>
