--- a/UI/html/history.html
+++ b/UI/html/history.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a href="../html/create-account.html">Create-account</a></li>
+                    <li><a href="../html/create-account.html">Open-account</a></li>
                     <li><a class="active" href="../html/history.html">History</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
@@ -56,7 +56,7 @@
                 
                     <a href="../html/create-account.html">
                         <div class="admin-nav-side">
-                            Create-account
+                            Open-account
                         </div>
                     </a> 
                     
