--- a/UI/html/staff.html
+++ b/UI/html/staff.html
@@ -64,25 +64,25 @@
                         <th>Created on</th>
                         <th>Branch</th>
                         <th>Balance</th>
-                        <th>Operations</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">0056-456789-6543</a> 
+                            <a href="staff-one-user.html">0056-456789-6543</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">15th march 2019</a> 
+                            <a href="staff-one-user.html">15th march 2019</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">Kigali</a>
+                            <a href="staff-one-user.html">Kigali</a>
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
@@ -91,19 +91,19 @@
 
                     <tr class="view">
                             <td>
-                                <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                                <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                             </td>
                             <td> 
-                                <a href="admin-one-user.html">0056-456789-6543</a> 
+                                <a href="staff-one-user.html">0056-456789-6543</a> 
                             </td>
                             <td> 
-                                <a href="admin-one-user.html">15th march 2019</a> 
+                                <a href="staff-one-user.html">15th march 2019</a> 
                             </td>
                             <td>
-                                <a href="admin-one-user.html">Kigali</a>
+                                <a href="staff-one-user.html">Kigali</a>
                             </td>
                             <td>
-                                <a href="admin-one-user.html">500000frw</a>
+                                <a href="staff-one-user.html">500000frw</a>
                             </td>
 
                         <td>
@@ -113,19 +113,19 @@
 
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">0056-456789-6543</a> 
+                            <a href="staff-one-user.html">0056-456789-6543</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">15th march 2019</a> 
+                            <a href="staff-one-user.html">15th march 2019</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">Kigali</a>
+                            <a href="staff-one-user.html">Kigali</a>
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
 
                         <td>
@@ -135,19 +135,19 @@
 
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">0056-456789-6543</a> 
+                            <a href="staff-one-user.html">0056-456789-6543</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">15th march 2019</a> 
+                            <a href="staff-one-user.html">15th march 2019</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">Kigali</a>
+                            <a href="staff-one-user.html">Kigali</a>
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
                             <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
@@ -156,19 +156,19 @@
 
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">0056-456789-6543</a> 
+                            <a href="staff-one-user.html">0056-456789-6543</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">15th march 2019</a> 
+                            <a href="staff-one-user.html">15th march 2019</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">Kigali</a>
+                            <a href="staff-one-user.html">Kigali</a>
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
 
                         <td>
@@ -178,19 +178,19 @@
 
                     <tr class="view">
                         <td>
-                            <a href="admin-one-user.html">Nkurunziza Joseph</a> 
+                            <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">0056-456789-6543</a> 
+                            <a href="staff-one-user.html">0056-456789-6543</a> 
                         </td>
                         <td> 
-                            <a href="admin-one-user.html">15th march 2019</a> 
+                            <a href="staff-one-user.html">15th march 2019</a> 
                         </td>
                         <td>
-                            <a href="admin-one-user.html">Kigali</a>
+                            <a href="staff-one-user.html">Kigali</a>
                         </td>
                         <td>
-                            <a href="admin-one-user.html">500000frw</a>
+                            <a href="staff-one-user.html">500000frw</a>
                         </td>
 
                         <td>
