--- a/UI/html/admin-one-user.html
+++ b/UI/html/admin-one-user.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a href="../html/admin-crt-acc.html">Create-account</a></li>
+                    <li><a href="../html/admin-crt-acc.html">Open-account</a></li>
                     <li><a href="../html/admin.html">Users</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
@@ -44,7 +44,7 @@
                 
                     <a href="../html/admin-crt-acc.html">
                         <div class="admin-nav-side">
-                            Create-account
+                            Open-account
                         </div>
                     </a>
                     <a href="../index.html">
@@ -69,6 +69,9 @@
                 <p>Name: Nkurunziza Joseph</p>
                 <p>Balance : 400000frw</p>
                 <p>Branch: Kigali</p>
+
+                <button id="operation">Activate</button>
+                <button id="operation">Deactivate</button>
             </div>
             
         </div>
