[Bug #165144564] add validations

--- a/UI/html/admin-crt-acc.html
+++ b/UI/html/admin-crt-acc.html
@@ -61,12 +61,12 @@
             <h2>Create account</h2>
             <form action="admin.html">
                 <div class="inputBox">            
-                    <input autocomplete="off" type="text" name="firstName" required>
+                    <input autocomplete="off" type="text" name="firstName" minlength="3" required>
                     <label for="firstName">First Name</label>
                 </div>
                 
                 <div class="inputBox">                   
-                    <input autocomplete="off" type="text" name="lastName" required>
+                    <input autocomplete="off" type="text" name="lastName" minlength="3" required>
                     <label for="lastName">Last Name</label>
                 </div>
                 
