--- a/UI/html/transaction.html
+++ b/UI/html/transaction.html
@@ -64,7 +64,7 @@
                 </div>
                 
                 <div class="inputBox">                   
-                    <input autocomplete="off" type="text" name="lastName" required>
+                    <input autocomplete="off" type="text" name="lastName" minlength="3" required>
                     <label for="lastName">Chashier name</label>
                 </div>
                 
