[Bug #165367105] Apply LFA's feedback

--- a/UI/html/transaction.html
+++ b/UI/html/transaction.html
@@ -65,7 +65,7 @@
                 
                 <div class="inputBox">                   
                     <input autocomplete="off" type="text" name="lastName" minlength="3" required>
-                    <label for="lastName">Chashier name</label>
+                    <label for="lastName">Cashier name</label>
                 </div>
                 
                 <div class="inputBox">          
