--- a/UI/html/admin-crt-acc.html
+++ b/UI/html/admin-crt-acc.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a class="active" href="../html/create-account.html">Open-account</a></li>
+                    <li><a class="active" href="../html/create-account.html">create-account</a></li>
                     <li><a href="../html/admin.html">Users</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
@@ -43,7 +43,7 @@
 
                     <a href="../html/admin-crt-acc.html">
                         <div class="admin-nav-side">
-                            Open-account
+                            create-account
                         </div>
                     </a>
 
