--- a/UI/html/admin-one-user.html
+++ b/UI/html/admin-one-user.html
@@ -17,7 +17,7 @@
 
             <nav id="pro">
                 <ul>
-                    <li><a href="../html/admin-crt-acc.html">Open-account</a></li>
+                    <li><a href="../html/admin-crt-acc.html">create-account</a></li>
                     <li><a href="../html/admin.html">Users</a></li>
                     <li><a href="../index.html">Logout</a></li>    
                 </ul>
@@ -44,7 +44,7 @@
                 
                     <a href="../html/admin-crt-acc.html">
                         <div class="admin-nav-side">
-                            Open-account
+                            create-account
                         </div>
                     </a>
                     <a href="../index.html">
@@ -67,6 +67,7 @@
             <div class="info">
                 <p>Account number: 0056-678987-5467</p>
                 <p>Name: Nkurunziza Joseph</p>
+                <p>Created on: 20 April 2018</p>
                 <p>Balance : 400000frw</p>
                 <p>Branch: Kigali</p>
 
