--- a/UI/html/staff-one-user.html
+++ b/UI/html/staff-one-user.html
@@ -64,6 +64,7 @@
             <div class="info">
                 <p>Account number: 0056-678987-5467</p>
                 <p>Name: Nkurunziza Joseph</p>
+                <p>Created on: 20 April 2018</p>
                 <p>Balance : 400000frw</p>
                 <p>Branch: Kigali</p>
             </div>
