--- a/UI/html/staff.html
+++ b/UI/html/staff.html
@@ -60,9 +60,6 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Account Number</th>
-                        <th>Created on</th>
-                        <th>Branch</th>
                         <th>Balance</th>
                         <th>Delete</th>
                     </tr>
@@ -72,20 +69,11 @@
                         <td>
                             <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
-                        <td> 
-                            <a href="staff-one-user.html">0056-456789-6543</a> 
-                        </td>
-                        <td> 
-                            <a href="staff-one-user.html">15th march 2019</a> 
-                        </td>
-                        <td>
-                            <a href="staff-one-user.html">Kigali</a>
-                        </td>
                         <td>
                             <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
                     </tr>
 
@@ -93,21 +81,12 @@
                             <td>
                                 <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                             </td>
-                            <td> 
-                                <a href="staff-one-user.html">0056-456789-6543</a> 
-                            </td>
-                            <td> 
-                                <a href="staff-one-user.html">15th march 2019</a> 
-                            </td>
-                            <td>
-                                <a href="staff-one-user.html">Kigali</a>
-                            </td>
                             <td>
                                 <a href="staff-one-user.html">500000frw</a>
                             </td>
 
                         <td>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
                     </tr>
 
@@ -115,21 +94,12 @@
                         <td>
                             <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
-                        <td> 
-                            <a href="staff-one-user.html">0056-456789-6543</a> 
-                        </td>
-                        <td> 
-                            <a href="staff-one-user.html">15th march 2019</a> 
-                        </td>
-                        <td>
-                            <a href="staff-one-user.html">Kigali</a>
-                        </td>
                         <td>
                             <a href="staff-one-user.html">500000frw</a>
                         </td>
 
                         <td>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
                     </tr>
 
@@ -137,20 +107,11 @@
                         <td>
                             <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
-                        <td> 
-                            <a href="staff-one-user.html">0056-456789-6543</a> 
-                        </td>
-                        <td> 
-                            <a href="staff-one-user.html">15th march 2019</a> 
-                        </td>
-                        <td>
-                            <a href="staff-one-user.html">Kigali</a>
-                        </td>
                         <td>
                             <a href="staff-one-user.html">500000frw</a>
                         </td>
                         <td>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
                     </tr>
 
@@ -158,21 +119,12 @@
                         <td>
                             <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
-                        <td> 
-                            <a href="staff-one-user.html">0056-456789-6543</a> 
-                        </td>
-                        <td> 
-                            <a href="staff-one-user.html">15th march 2019</a> 
-                        </td>
-                        <td>
-                            <a href="staff-one-user.html">Kigali</a>
-                        </td>
                         <td>
                             <a href="staff-one-user.html">500000frw</a>
                         </td>
 
                         <td>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
                     </tr>
 
@@ -180,27 +132,26 @@
                         <td>
                             <a href="staff-one-user.html">Nkurunziza Joseph</a> 
                         </td>
-                        <td> 
-                            <a href="staff-one-user.html">0056-456789-6543</a> 
-                        </td>
-                        <td> 
-                            <a href="staff-one-user.html">15th march 2019</a> 
-                        </td>
-                        <td>
-                            <a href="staff-one-user.html">Kigali</a>
-                        </td>
                         <td>
                             <a href="staff-one-user.html">500000frw</a>
                         </td>
 
                         <td>
-                            <img src="../assets/icons/waste-bin.svg" alt="Delete" class="trashEmail">
+                            <img src="../assets/icons/waste-bin.svg" class="del" alt="Delete" id="trashEmail">
                         </td>
                     </tr>
                                          
                 </tbody>
             </table>
-           </div>
+           <!-- Popup -->
+           <div id="triggerPopup" class="popup">
+                <div class="popup-content">
+                    <span class="closePopup">&times;</span>
+                    <p>Are you sure you want to delete User Bank account?</p>
+                    <button id="popupBtn">Cancel</button>
+                    <button id="popupBtnok">Yes</button>
+            </div>
+            </div>
       </div>
     </section>
     <script src="../js/index.js"></script>
